@@ -4,3 +4,4 @@ OLcfgCt{Oc|At}:1	smbk5pwd
 OLcfgCt{Oc|At}:2	autogroup
 OLcfgCt{Oc|At}:3	nssov
 OLcfgCt{Oc|At}:4	cloak
+OLcfgCt{Oc|At}:5	lastbind
